z-index fixed

--- a/css/components/fullscreen-menu.scss
+++ b/css/components/fullscreen-menu.scss
@@ -6,6 +6,7 @@
   bottom: 0;
   top: 0;
   display: none;
+  z-index: 99999999;
   }
 
 .fullscreen-menu__close {
