--- a/css/main.css
+++ b/css/main.css
@@ -1791,6 +1791,7 @@ textarea {
   bottom: 0;
   top: 0;
   display: none;
+  z-index: 99999999;
 }
 
 .fullscreen-menu__close {
